# rulix

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: coverage.yml  rust.yml
crates/rulix-fs/: Cargo.toml
crates/undo-fs/: Cargo.toml  README.md
crates/undo-fs/src/: checksum.rs  errors.rs  file_handler.rs  lib.rs  operation.rs  transaction.rs
crates/undo-fs/tests/: cross_device.rs
examples/: basic_move.yaml
src/: config.rs  errors.rs  main.rs  rules.rs  runner.rs  steps.rs
src/cli/: list.rs  mod.rs
src/steps/: match_files.rs  mod.rs  move_to.rs  notify.rs
tests/: cli_tests.rs  test_basic_steps.rs
tests/fixtures/: invalid_target_path.yaml  move_files_with_ext.yaml  notify_step.yaml
tests/snapshots/: cli_tests__tests__list_outputs_rules_from_yaml_file.snap  cli_tests__tests__notify_step_produces_right_output.snap  cli_tests__tests__run_defaults_to_dry_run.snap  test_basic_steps__tests__notify_step_produces_right_output.snap
