[package]
name = "rulix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[profile.release]
strip = true
codegen-units = 1
lto = true

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"
