[package]
name = "rulix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[profile.release]
strip = true
codegen-units = 1
lto = true

[dev-dependencies]
assert_cmd = "2.2.2"
indoc = "2.0.7"
insta = "1.48.0"
predicates = "3.1.4"
tempfile = "3.27.0"
