[package]
name = "undo-fs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/parneetsingh022/rulix"
homepage = "https://github.com/parneetsingh022/rulix/tree/main/crates/rulix-fs"
readme = "README.md"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
